change http to https on jQuery link

--- a/views/index.html
+++ b/views/index.html
@@ -58,7 +58,7 @@
   <img src='images/garurumon.gif'>
 </div>
 
-<script src='http://code.jquery.com/jquery-latest.min.js'></script>
+<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 <script type='text/javascript' src='myGuessingGame.js'></script>
 </body>
 </html>
